Dependencies update (#15)
* update Spring boot and React dependencies

* fix incompatibilities